// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using TechChallenge.Oficina.DB.Data.Context;

#nullable disable

namespace TechChallenge.Oficina.Data.Migrations
{
    [DbContext(typeof(OficinaDbContext))]
    partial class OficinaDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.4")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Clientes.Cliente", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Email")
                        .HasMaxLength(320)
                        .HasColumnType("character varying(320)")
                        .HasColumnName("email");

                    b.Property<string>("NomeCompleto")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("nome_completo");

                    b.HasKey("Id");

                    b.ToTable("clientes", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Indicadores.Indicador", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    b.Property<TimeSpan>("TempoMedioEntrega")
                        .HasColumnType("interval")
                        .HasColumnName("tempo_medio_entrega");

                    b.Property<TimeSpan>("TempoMedioExecucao")
                        .HasColumnType("interval")
                        .HasColumnName("tempo_medio_execucao");

                    b.HasKey("Id");

                    b.ToTable("indicadores", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Insumos.Insumo", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Fabricante")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("character varying(150)")
                        .HasColumnName("fabricante");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("character varying(150)")
                        .HasColumnName("nome");

                    b.Property<int>("QuantidadeDisponivel")
                        .HasColumnType("integer")
                        .HasColumnName("quantidade_disponivel");

                    b.Property<decimal>("ValorUnitario")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)")
                        .HasColumnName("valor_unitario");

                    b.HasKey("Id");

                    b.ToTable("insumos", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.OrdensServico.OrdemServico", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("ClienteId")
                        .HasColumnType("uuid")
                        .HasColumnName("cliente_id");

                    b.Property<int>("Status")
                        .HasColumnType("integer")
                        .HasColumnName("status");

                    b.Property<Guid>("VeiculoId")
                        .HasColumnType("uuid")
                        .HasColumnName("veiculo_id");

                    b.HasKey("Id");

                    b.HasIndex("ClienteId");

                    b.HasIndex("Status");

                    b.HasIndex("VeiculoId");

                    b.ToTable("ordens_servico", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Servicos.ItemServico", b =>
                {
                    b.Property<Guid>("ServicoId")
                        .HasColumnType("uuid")
                        .HasColumnName("servico_id");

                    b.Property<Guid>("InsumoId")
                        .HasColumnType("uuid")
                        .HasColumnName("insumo_id");

                    b.Property<int>("Quantidade")
                        .HasColumnType("integer")
                        .HasColumnName("quantidade");

                    b.HasKey("ServicoId", "InsumoId");

                    b.HasIndex("InsumoId");

                    b.ToTable("servicos_insumos", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Servicos.Servico", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Descricao")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("descricao");

                    b.Property<string>("Nome")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("character varying(150)")
                        .HasColumnName("nome");

                    b.HasKey("Id");

                    b.ToTable("servicos", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Veiculos.Veiculo", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<int>("Ano")
                        .HasColumnType("integer")
                        .HasColumnName("ano");

                    b.Property<Guid>("ClienteId")
                        .HasColumnType("uuid")
                        .HasColumnName("cliente_id");

                    b.Property<string>("Marca")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("marca");

                    b.Property<string>("Modelo")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("modelo");

                    b.Property<string>("Placa")
                        .IsRequired()
                        .HasMaxLength(7)
                        .HasColumnType("character varying(7)")
                        .HasColumnName("placa");

                    b.Property<string>("Renavam")
                        .IsRequired()
                        .HasMaxLength(11)
                        .HasColumnType("character varying(11)")
                        .HasColumnName("renavam");

                    b.HasKey("Id");

                    b.HasIndex("ClienteId");

                    b.HasIndex("Placa")
                        .IsUnique();

                    b.ToTable("veiculos", (string)null);
                });

            modelBuilder.Entity("ordens_servico_servicos", b =>
                {
                    b.Property<Guid>("ordem_servico_id")
                        .HasColumnType("uuid");

                    b.Property<Guid>("servico_id")
                        .HasColumnType("uuid");

                    b.HasKey("ordem_servico_id", "servico_id");

                    b.HasIndex("servico_id");

                    b.ToTable("ordens_servico_servicos", (string)null);
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Clientes.Cliente", b =>
                {
                    b.OwnsOne("TechChallenge.Oficina.Domain.Features.Clientes.VOs.IdentificacaoCliente", "Identificacao", b1 =>
                        {
                            b1.Property<Guid>("ClienteId")
                                .HasColumnType("uuid");

                            b1.Property<int>("Tipo")
                                .HasColumnType("integer")
                                .HasColumnName("tipo_identificacao");

                            b1.Property<string>("Valor")
                                .IsRequired()
                                .HasMaxLength(14)
                                .HasColumnType("character varying(14)")
                                .HasColumnName("identificacao");

                            b1.HasKey("ClienteId");

                            b1.HasIndex("Valor")
                                .IsUnique();

                            b1.ToTable("clientes");

                            b1.WithOwner()
                                .HasForeignKey("ClienteId");
                        });

                    b.Navigation("Identificacao")
                        .IsRequired();
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.OrdensServico.OrdemServico", b =>
                {
                    b.HasOne("TechChallenge.Oficina.Domain.Features.Clientes.Cliente", "Cliente")
                        .WithMany()
                        .HasForeignKey("ClienteId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("TechChallenge.Oficina.Domain.Features.Veiculos.Veiculo", "Veiculo")
                        .WithMany()
                        .HasForeignKey("VeiculoId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.OwnsOne("TechChallenge.Oficina.Domain.Features.Orcamentos.Orcamento", "Orcamento", b1 =>
                        {
                            b1.Property<Guid>("OrdemServicoId")
                                .HasColumnType("uuid")
                                .HasColumnName("ordem_servico_id");

                            b1.Property<DateTime>("DataGeracao")
                                .HasColumnType("timestamp with time zone")
                                .HasColumnName("data_geracao");

                            b1.Property<decimal>("ValorTotal")
                                .HasColumnType("numeric(18,2)")
                                .HasColumnName("valor_total");

                            b1.HasKey("OrdemServicoId");

                            b1.ToTable("ordens_servico_orcamentos", (string)null);

                            b1.WithOwner()
                                .HasForeignKey("OrdemServicoId");

                            b1.OwnsMany("TechChallenge.Oficina.Domain.Features.Orcamentos.OrcamentoServico", "Servicos", b2 =>
                                {
                                    b2.Property<int>("id")
                                        .ValueGeneratedOnAdd()
                                        .HasColumnType("integer");

                                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b2.Property<int>("id"));

                                    b2.Property<string>("NomeServico")
                                        .IsRequired()
                                        .HasMaxLength(150)
                                        .HasColumnType("character varying(150)")
                                        .HasColumnName("nome_servico");

                                    b2.Property<Guid>("ServicoId")
                                        .HasColumnType("uuid")
                                        .HasColumnName("servico_id");

                                    b2.Property<decimal>("ValorTotal")
                                        .HasColumnType("numeric(18,2)")
                                        .HasColumnName("valor_total");

                                    b2.Property<Guid>("ordem_servico_id")
                                        .HasColumnType("uuid");

                                    b2.HasKey("id");

                                    b2.HasIndex("ServicoId");

                                    b2.HasIndex("ordem_servico_id");

                                    b2.ToTable("ordens_servico_orcamentos_servicos", (string)null);

                                    b2.WithOwner()
                                        .HasForeignKey("ordem_servico_id");
                                });

                            b1.Navigation("Servicos");
                        });

                    b.OwnsMany("TechChallenge.Oficina.Domain.Features.OrdensServico.VOs.HistoricoStatusOrdemServico", "HistoricoStatus", b1 =>
                        {
                            b1.Property<int>("id")
                                .ValueGeneratedOnAdd()
                                .HasColumnType("integer");

                            NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b1.Property<int>("id"));

                            b1.Property<DateTime>("DataAlteracao")
                                .HasColumnType("timestamp with time zone")
                                .HasColumnName("data_alteracao");

                            b1.Property<int>("Status")
                                .HasColumnType("integer")
                                .HasColumnName("status");

                            b1.Property<Guid>("ordem_servico_id")
                                .HasColumnType("uuid");

                            b1.HasKey("id");

                            b1.HasIndex("DataAlteracao");

                            b1.HasIndex("ordem_servico_id");

                            b1.ToTable("ordens_servico_historico_status", (string)null);

                            b1.WithOwner()
                                .HasForeignKey("ordem_servico_id");
                        });

                    b.Navigation("Cliente");

                    b.Navigation("HistoricoStatus");

                    b.Navigation("Orcamento");

                    b.Navigation("Veiculo");
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Servicos.ItemServico", b =>
                {
                    b.HasOne("TechChallenge.Oficina.Domain.Features.Insumos.Insumo", "Insumo")
                        .WithMany()
                        .HasForeignKey("InsumoId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("TechChallenge.Oficina.Domain.Features.Servicos.Servico", "Servico")
                        .WithMany("ItensServico")
                        .HasForeignKey("ServicoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Insumo");

                    b.Navigation("Servico");
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Veiculos.Veiculo", b =>
                {
                    b.HasOne("TechChallenge.Oficina.Domain.Features.Clientes.Cliente", "Cliente")
                        .WithMany()
                        .HasForeignKey("ClienteId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Cliente");
                });

            modelBuilder.Entity("ordens_servico_servicos", b =>
                {
                    b.HasOne("TechChallenge.Oficina.Domain.Features.OrdensServico.OrdemServico", null)
                        .WithMany()
                        .HasForeignKey("ordem_servico_id")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("TechChallenge.Oficina.Domain.Features.Servicos.Servico", null)
                        .WithMany()
                        .HasForeignKey("servico_id")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();
                });

            modelBuilder.Entity("TechChallenge.Oficina.Domain.Features.Servicos.Servico", b =>
                {
                    b.Navigation("ItensServico");
                });
#pragma warning restore 612, 618
        }
    }
}
